uhm lets try a deploy

--- a/client/src/app/components/events/events.html
+++ b/client/src/app/components/events/events.html
@@ -4,7 +4,7 @@
     <acme-navbar creationDate="main.creationDate" />
   </div>
 
-  <h1>Events</h1>
+  <h1>Adventures</h1>
 
   <div ng-repeat="event in events">
     <h2>{{ event.name }}</h2>
